2011-05-26  Tassilo Horn  <tassilo@member.fsf.org>

	* tex.el (TeX-source-correlate-sync-source): Adapt to handle
	file:// URLs.

2011-05-15  Ralf Angeli  <angeli@caeruleus.net>

	* Makefile.in (STYLESRC): Add style/setspace.el.

	* tex.el (TeX-expand-list): Add a safeguard to the %(outpage)
	expander for when an output page function returns nil.

2011-05-09  Tassilo Horn  <tassilo@member.fsf.org>

	* tex.el (TeX-synctex-output-page-1): New function for calling
	synctex.
	(TeX-synctex-output-page): Use it, and try relative file names
	with and without leading ./ when calling synctex before falling
	back to page 1.
	(TeX-source-correlate-sync-source): Add &rest parameter, because
	Evince 3 sends an additional (ignored) parameter via dbus.

2011-05-01  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-tree-expand): Use a different test to check for an
	absolute path on Windows.

	* font-latex.el (font-latex-built-in-keyword-classes): Add
	definition for \rule and remove the one for \sbox.

2011-04-25  Ralf Angeli  <angeli@caeruleus.net>

	* style/setspace.el: Add support for changing \displayskipstretch.

2011-04-25  Mads Jensen  <mje@inducks.org>

	* style/setspace.el: New file.

2011-04-25  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-style-list): Add memoir.

2011-04-20  Ralf Angeli  <angeli@caeruleus.net>

	* tex-fold.el (TeX-fold-expand-spec): Make sure the expansion of a
	placeholder is not processed again.

2011-04-15  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-built-in-keyword-classes): Make a few
	additions and corrections.

	* latex.el (LaTeX-common-initialization): Prompt for file
	extension instead of name when inserting \addcontentsline or
	\addtocontents.

2011-04-10  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-source-correlate-mode): Check for D-Bus session.

2011-04-10  Antoine Levitt  <antoine.levitt@gmail.com>  (tiny change)

	* tex.el (TeX-source-correlate-sync-source): Do not use
	`goto-line'.
